@@ -2043,7 +2043,7 @@ message_info_new_from_header(CamelFolderSummary *s, struct _camel_header_raw *h)
 		charset = NULL;
 	
 	charset = charset ? e_iconv_charset_name (charset) : NULL;
-	
+
 	subject = summary_format_string(h, "subject", charset);
 	from = summary_format_address(h, "from", charset);
 	to = summary_format_address(h, "to", charset);
